fixed up spacing between buttons

--- a/src/style.css
+++ b/src/style.css
@@ -214,7 +214,7 @@ a.active {
 
 .double-bttn-cont {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   position: relative;
 }
 
